# project_gym

./: .gitignore  README.md
desktop_application/: CMakeLists.txt  README.md  exerciseplantable.cpp  exerciseplantable.h  main.cpp  members.json  notes-for-dev.md
desktop_application/gTest/: CMakeLists.txt  dailyexerciseplan_fixture.cpp  exercise_fixture.cpp  exerciseplan_fixture.cpp  measurements_fixture.cpp  member_fixture.cpp  payment_fixture.cpp  paymentplan_fixture.cpp  subscription_fixture.cpp  weeklyexerciseplan_fixture.cpp
desktop_application/inc/: cardioworkout.h  dailyexerciseplan.h  exercise.h  exerciseplan.h  jsoncontainer.h  jsonparser.h  mainwindow.h  measurement.h  member.h  membermanager.h  strengthworkout.h  subscription.h  weeklyexerciseplan.h
desktop_application/inc/gui/: exerciseplandialog.h  infodialog.h  logindialog.h  mainwindow.h  newmeasurementsdialog.h  reconnectdialog.h  registerdialog.h
desktop_application/inc/gui/components/: exercisedayview.h  exerciseplantable.h  exerciseplantabs.h  exerciseweekview.h
desktop_application/inc/json/: jsoncontainer.h  jsonparser.h  membermanager.h
desktop_application/inc/member/: measurement.h  member.h  payment.h  paymentplan.h  subscription.h
desktop_application/inc/member/exercise/: cardioworkout.h  dailyexerciseplan.h  exercise.h  weeklyexerciseplan.h
desktop_application/inc/member/subscription/: payment.h  subscription.h
desktop_application/inc/network/: deleterequest.h  getrequest.h  httpmanager.h  networkcore.h  postrequest.h  putrequest.h
desktop_application/src/: cardioworkout.cpp  dailyexerciseplan.cpp  exercise.cpp  exerciseplan.cpp  jsoncontainer.cpp  jsonparser.cpp  main.cpp  mainwindow.cpp  measurement.cpp  member.cpp  membermanager.cpp  strengthworkout.cpp  subscription.cpp  weeklyexerciseplan.cpp
desktop_application/src/gui/: exerciseplandialog.cpp  infodialog.cpp  logindialog.cpp  mainwindow.cpp  newmeasurementsdialog.cpp  reconnectdialog.cpp  registerdialog.cpp
desktop_application/src/gui/components/: exercisedayview.cpp  exerciseplantable.cpp  exerciseplantabs.cpp  exerciseweekview.cpp
desktop_application/src/json/: jsoncontainer.cpp  jsonparser.cpp  membermanager.cpp
desktop_application/src/member/: measurement.cpp  member.cpp  payment.cpp  paymentplan.cpp  subscription.cpp
desktop_application/src/member/exercise/: cardioworkout.cpp  dailyexerciseplan.cpp  exercise.cpp  strengthworkout.cpp  weeklyexerciseplan.cpp
desktop_application/src/member/subscription/: payment.cpp  paymentplan.cpp  subscription.cpp
desktop_application/src/network/: deleterequest.cpp  getrequest.cpp  httpmanager.cpp  networkcore.cpp  postrequest.cpp  putrequest.cpp
desktop_application/ui/: exerciseplandialog.ui  infodialog.ui  logindialog.ui  mainwindow.ui  newmeasurementsdialog.ui  reconnectdialog.ui  registerdialog.ui
mobile_application/: CMakeLists.txt
mobile_application/gui/: CMakeLists.txt
